# mcp-for-beginners-python

./: .gitignore  AGENTS.md  README.md  SUPPORT.md  changelog.md  study_guide.md
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: co-op-translator.yml
00-Introduction/: README.md
01-CoreConcepts/: README.md
02-Security/: README.md  azure-content-safety-implementation.md  azure-content-safety.md  mcp-best-practices.md  mcp-security-best-practices-2025.md  mcp-security-controls-2025.md
03-GettingStarted/: README.md
03-GettingStarted/01-first-server/: README.md
03-GettingStarted/02-client/: README.md  client_example_csharp.cs  client_example_java.java  client_example_python.py  client_example_rust.rs  client_example_typescript.ts  complete_examples.md
03-GettingStarted/03-llm-client/solution/rust/: Cargo.toml
03-GettingStarted/03-llm-client/solution/rust/src/: main.rs
03-GettingStarted/06-http-streaming/solution/rust/calculator-httpserver/: Cargo.toml  README.md
03-GettingStarted/06-http-streaming/solution/rust/calculator-httpserver/src/: main.rs
04-PracticalImplementation/: README.md
05-AdvancedTopics/: README.md  requirements.txt
06-CommunityContributions/: README.md
07-LessonsfromEarlyAdoption/: README.md  microsoft-mcp-servers.md
08-BestPractices/: README.md
09-CaseStudy/: README.md  UpdateADOItemsFromYT.md  apimsample.md  travelagentsample.md
10-StreamliningAIWorkflowsBuildingAnMCPServerWithAIToolkit/: README.md
11-MCPServerHandsOnLabs/: README.md
(+259 files in other folders)
