[package]
name = "calculator-client-with-llm"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = { version = "0.29.0", features = ["byot"] }
rmcp = { version = "0.5.0", features = ["client", "transport-child-process"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }

[dev-dependencies]
slab = "0.4.11"