[package]
name = "calculator-httpserver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
rmcp = { version = "0.5.0", features = ["server","transport-streamable-http-server", "transport-worker"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread", "signal"] }

[dev-dependencies]
slab = "0.4.11"